<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/stop"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="30dp"
            android:text="@string/stop"
            android:textColor="#FFF"
            android:background="@drawable/red_rounded"
            android:textSize="16sp"
            android:textStyle="normal|bold"/>

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stop"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corners"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/back"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <Switch
            android:id="@+id/rr_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/back"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:switchMinWidth="56dp"
            android:text="@string/show_real_route"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:theme="@style/SwitchTheme"/>

        <Switch
            android:id="@+id/er_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rr_sw"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:checked="true"
            android:switchMinWidth="56dp"
            android:text="@string/show_estimated_route"
            android:textOff="@string/off"
            android:textOn="@string/on" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_below="@+id/er_sw"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            tools:context=".RealActivity" />

    </RelativeLayout>
</ScrollView>